# Cloudscaper

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  montserrat.arfont  test.shadron
src/: CMakeLists.txt  atmosphere_types.h  cloudscaper.cpp  cloudscaper.h  main.cpp
src/application/: application.cpp  application.h  window.cpp  window.h
src/ninmath/: ninmath.h  noise.h
src/renderer/: pipeline_assembler.cpp  pipeline_assembler.h  pipeline_builder.h  pipeline_state.cpp  pipeline_state.h  renderer.cpp  renderer.h  renderer_common.h  renderer_types.h  resources.cpp  resources.h  root_constant_value.h  shader.h  shader_compiler.cpp  shader_compiler.h  shader_types.h
src/renderer/memory/: descriptor_allocator.cpp  descriptor_allocator.h  memory_allocator.cpp  memory_allocator.h  static_descriptor_allocator.cpp  static_descriptor_allocator.h  static_memory_allocator.cpp  static_memory_allocator.h
src/renderer/multithreading/: thread_pool.cpp  thread_pool.h
src/shaders/: pixel_shader.hlsl  test_cs.hlsl  vertex_shader.hlsl
src/shaders/atmosphere/: atmosphere_common.hlsl  multiscattering_lut_cs.hlsl  sky_raymarch_quad_ps.hlsl  skyview_lut_cs.hlsl  transmittance_lut_cs.hlsl
src/shaders/cloudscapes/: blend_with_main_render_target_cs.hlsl  compute_detail_noise_cs.hlsl  compute_model_noise_cs.hlsl  raymarch_clouds_cs.hlsl  raymarch_quad_ps.hlsl  raymarch_quad_vs.hlsl  texture_3d_mip_maps_cs.hlsl
src/shaders/common/: math.hlsl  render_common.hlsl  volumetric_rendering.hlsl
src/shaders/compute_effects/: gaussian_blur_cs.hlsl  taa_cs.hlsl
src/shaders/ui/: quad_ps.hlsl  quad_vs.hlsl  rounded_rect_ps.hlsl  rounded_rect_vs.hlsl  text_rect_ps.hlsl  text_rect_vs.hlsl
src/ui/: font_manager.cpp  font_manager.h  quad_primitive_renderer.cpp  quad_primitive_renderer.h  ui_framework.cpp  ui_framework.h  ui_primitives.h
src/ui/primitive_renderers/: quad_primitive_renderer.cpp  quad_primitive_renderer.h  rounded_rect_primitive_renderer.cpp  rounded_rect_primitive_renderer.h  text_primitive_renderer.cpp  text_primitive_renderer.h  ui_primitive_renderer.cpp  ui_primitive_renderer.h  ui_primitives.h
src/ui/widgets/: button.cpp  button.h  labeled_numeric_input.h  layout.cpp  layout.h  numeric_input.h  slider.h  text.cpp  text.h  text_input.cpp  text_input.h  vertical_layout.cpp  vertical_layout.h  widget.cpp  widget.h
